--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         android:id="@+id/textureView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true" android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"/>
     <ImageButton
         android:id="@+id/videoOnlineImageButton"
         android:layout_width="wrap_content"
@@ -27,9 +28,20 @@
         android:id="@+id/cameraImageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
         android:contentDescription="@string/camera_button_description"
-        app:srcCompat="@mipmap/btn_camera" android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"/>
+        app:srcCompat="@mipmap/btn_camera"/>
+
+    <Chronometer
+        android:id="@+id/chronometer"
+        android:layout_width="wrap_content"
+        android:visibility="invisible"
+        android:textColor="#FF0000"
+        android:textSize="25dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/videoOnlineImageButton"
+        android:layout_alignStart="@+id/videoOnlineImageButton"/>
 
 
 </RelativeLayout>
